feat: implement feature to delete invididual api and/or application (#35)
